# CppPractice

./: .appveyor.yml  CMakeLists.txt  README.md  build.bat
src/: rangedFor.cpp  testLambda.cpp  testRangedFor.cpp  unittest_main.cpp
src/demo/: CMakeLists.txt  build_vs2008.bat  build_vs2019.bat  readme.md
src/demo/src/: testHexdump.cpp  testLambda.cpp  testRangedFor.cpp  testSharedptr.cpp  testThread.cpp
src/demo/src/testBoost/: test.cpp  testVer.cpp
src/test/: testHexdump.cpp  testLambda.cpp
